# Einsatzcockpit-gateway

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build.yml
ecpg/: __init__.py  alarm_parser.py  cloud_connector.py  html_render.py  main.py  offline_print.py  pairing.py  print_manager.py  printer_discovery.py  printer_health.py  serial_ingest.py  serial_passthrough.py  settings.py  spool.py  status_server.py
tests/: fake_comserver.py  test_parser_rfl.py  test_print_manager.py  test_printer_health.py  test_serial_datagram.py  test_serial_passthrough.py  test_spool_retry.py  test_status_server.py  test_version.py
